// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`golden parcels — deterministic KPI regression > SA solve (30 iterations) is stable: l-shape-120 1`] = `
{
  "adaStalls": 5,
  "buildings": 2,
  "builtSF": 86300,
  "compliant": true,
  "coveragePct": 20.8,
  "evStalls": 9,
  "far": 1.25,
  "openSpacePct": 54.3,
  "score": 0.699,
  "stalls": 83,
  "stallsRequired": 75,
  "units": 75,
}
`;

exports[`golden parcels — deterministic KPI regression > SA solve (30 iterations) is stable: large-block-220x160 1`] = `
{
  "adaStalls": 18,
  "buildings": 9,
  "builtSF": 361000,
  "compliant": true,
  "coveragePct": 25.9,
  "evStalls": 35,
  "far": 1.46,
  "openSpacePct": 40.3,
  "score": 0.582,
  "stalls": 343,
  "stallsRequired": 311,
  "units": 311,
}
`;

exports[`golden parcels — deterministic KPI regression > SA solve (30 iterations) is stable: mid-rect-80x60 1`] = `
{
  "adaStalls": 3,
  "buildings": 1,
  "builtSF": 47000,
  "compliant": true,
  "coveragePct": 23.2,
  "evStalls": 5,
  "far": 1.39,
  "openSpacePct": 30.4,
  "score": 0.724,
  "stalls": 46,
  "stallsRequired": 41,
  "units": 41,
}
`;

exports[`golden parcels — deterministic KPI regression > constructive solve is stable: l-shape-120 1`] = `
{
  "adaStalls": 5,
  "buildings": 2,
  "builtSF": 86300,
  "compliant": true,
  "coveragePct": 20.8,
  "evStalls": 9,
  "far": 1.25,
  "openSpacePct": 54.3,
  "score": 0.699,
  "stalls": 83,
  "stallsRequired": 75,
  "units": 75,
}
`;

exports[`golden parcels — deterministic KPI regression > constructive solve is stable: large-block-220x160 1`] = `
{
  "adaStalls": 19,
  "buildings": 8,
  "builtSF": 375600,
  "compliant": true,
  "coveragePct": 25.3,
  "evStalls": 37,
  "far": 1.52,
  "openSpacePct": 41.7,
  "score": 0.577,
  "stalls": 361,
  "stallsRequired": 328,
  "units": 328,
}
`;

exports[`golden parcels — deterministic KPI regression > constructive solve is stable: mid-rect-80x60 1`] = `
{
  "adaStalls": 3,
  "buildings": 1,
  "builtSF": 47000,
  "compliant": true,
  "coveragePct": 23.2,
  "evStalls": 5,
  "far": 1.39,
  "openSpacePct": 30.4,
  "score": 0.724,
  "stalls": 46,
  "stallsRequired": 41,
  "units": 41,
}
`;

exports[`golden parcels — deterministic KPI regression > constructive solve is stable: narrow-deep-40x140 1`] = `
{
  "adaStalls": 3,
  "buildings": 1,
  "builtSF": 47000,
  "compliant": true,
  "coveragePct": 19.9,
  "evStalls": 5,
  "far": 1.19,
  "openSpacePct": 51.2,
  "score": 0.691,
  "stalls": 46,
  "stallsRequired": 41,
  "units": 41,
}
`;

exports[`golden parcels — deterministic KPI regression > constructive solve is stable: small-infill-30x35 1`] = `
{
  "adaStalls": 1,
  "buildings": 1,
  "builtSF": 12700,
  "compliant": true,
  "coveragePct": 57.5,
  "evStalls": 2,
  "far": 1.72,
  "openSpacePct": 17.6,
  "score": 0.418,
  "stalls": 13,
  "stallsRequired": 11,
  "units": 11,
}
`;

exports[`golden parcels — deterministic KPI regression > constructive solve is stable: trapezoid-140 1`] = `
{
  "adaStalls": 5,
  "buildings": 2,
  "builtSF": 93900,
  "compliant": true,
  "coveragePct": 22,
  "evStalls": 10,
  "far": 1.32,
  "openSpacePct": 44.3,
  "score": 0.712,
  "stalls": 91,
  "stallsRequired": 82,
  "units": 82,
}
`;

exports[`golden parcels — deterministic KPI regression > constructive solve is stable: wide-shallow-160x40 1`] = `
{
  "adaStalls": 3,
  "buildings": 1,
  "builtSF": 47000,
  "compliant": true,
  "coveragePct": 17.4,
  "evStalls": 5,
  "far": 1.05,
  "openSpacePct": 51.6,
  "score": 0.665,
  "stalls": 46,
  "stallsRequired": 41,
  "units": 41,
}
`;
